[package]
name = "invert"
description = "Inverts an Ord"
version = "0.2.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/invert"
repository = "https://github.com/stevebob/invert.git"
homepage = "https://github.com/stevebob/invert.git"
readme = "README.md"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
